# TrendingIssueResolutionSys

./: .env  .env.example  .gcloudignore  Dockerfile  README.md  access_service.bat  add_sample_issues.py  check_table.py  cloud_deploy.sh  dashboard.py  demo_runner.py  demo_scenario_1.py  demo_scenario_2.py  demo_scenario_3.py  deploy_to_cloud.py  enhanced_run_final.py  enhanced_standalone.py  install_beta.bat  load_test.py  main.tf  populate_bigquery.py  populate_datastore.py  pyproject.toml  quick_test.py  requirements.txt  run_agent.py  run_final.py  run_fixed.py  run_local.bat  run_simple.py  run_without_gcloud.py  setup.bat  setup.py  setup_and_run.py  setup_data.py  simple_deploy.sh  simple_test.py  start_dashboard.bat  test_cloud_deployment.py  test_dashboard_endpoints.py  (+5 more)
templates/: dashboard.html
tests/: test_agents.py
trending_issue_resolver/: __init__.py  agent.py  prompt.py
trending_issue_resolver/dashboard/: __init__.py  dashboard.py  requirements.txt
trending_issue_resolver/sub_agents/data_fetcher/: __init__.py  agent.py  prompt.py
trending_issue_resolver/sub_agents/exit_condition/: __init__.py  agent.py  prompt.py
trending_issue_resolver/sub_agents/human_intervention/: __init__.py  agent.py  prompt.py
trending_issue_resolver/sub_agents/knowledge_retrieval/: __init__.py  agent.py  prompt.py
trending_issue_resolver/sub_agents/notifier/: __init__.py  agent.py  prompt.py
trending_issue_resolver/sub_agents/resolution_generator/: __init__.py  (+2 more)
trending_issue_resolver/tools/: bigquery_tool.py  crm_tool.py  datastore_tool.py  firestore_tool.py
(+6 files in other folders)
