[tool.poetry]
name = "trending-issue-resolver"
version = "0.1.0"
description = "GenAI-powered system for detecting and resolving trending customer issues using ADK"
authors = ["ADK Team"]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-aiplatform = "^1.36.0"
google-cloud-bigquery = "^3.13.0"
google-cloud-firestore = "^2.13.0"
google-cloud-functions = "^1.13.3"
sendgrid = "^6.10.0"
firebase-admin = "^6.3.0"
python-dotenv = "^1.0.0"
adk = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3